fixed scrolling on ios and added loader

--- a/src/app/style/common.style.scss
+++ b/src/app/style/common.style.scss
@@ -7,6 +7,7 @@ html, body, #appContainer, #root{
 	background:#efefee;
 	max-width: 100%;
     overflow-x: hidden;
+    -webkit-overflow-scrolling: touch;
 }
 
 
@@ -109,7 +110,7 @@ a:hover, a:focus, a:visited{
 
     .arrow{
    	position: relative;
-    top: -40px;
+    top: -60px;
     }
 }
 
